# iPTMnet-API

./: .gitignore  .tool-versions  Cargo.toml  README.md  config.ini
doc/: config.md  deployment.md  overview.md  setup.md
docker/: Dockerfile  build_image.sh  config.ini  docker_run.sh
docker/static/: statistics.json
iptmnet_api_test/: models.py  test.py  test_api.py  test_helper.py
iptmnet_api_test/responses/: batch_ptm_enzymes.csv  batch_ptm_enzymes.json  batch_ptm_ppi.csv  batch_ptm_ppi.json  info.json  proteoforms.csv  proteoforms.json  proteoformsppi.csv  proteoformsppi.json  ptmppi.csv  ptmppi.json  search.csv  search.json  substrate.csv  substrate.json
sql/: match_csv.sql
src/: controller.rs  database.rs  errors.rs  flatten.rs  main.rs  misc.rs  models.rs  msa.rs  query_builder.rs  router.rs
static/: statistics.json
swagger_ui/: Dockerfile  build_image.sh  docker-run.sh  iptmnet_spec.json
