[package]
name = "iptmnet_api"
version = "0.1.0"
authors = ["Sachin <sachinx0e@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "0.5.1"
env_logger = "0.5.6"
postgres = "0.15"
log = "0.4"
serde_json = "1.0.13"
serde = "1.0.33"
serde_derive = "1.0.33"
error-chain = "0.11.0"
inner = "0.1.1"
futures = "0.1.17"
csv = "1.0.0-beta.5"
oracle = "0.0.8"
rust-ini = "0.10"
bio = "0.21.0"
rayon = "1.0.2"